--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ header {
     color: white;
     text-align: center;
     padding: 0.2rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
 }
 
 nav {
